--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ services:
     web-app-a:
         image: web-app
         container_name: web-app-a
-        build:
-            context: .
-            dockerfile: ./Dockerfile
+        build: .
         ports:
             - "10000:80"
             - "20000:3306"
@@ -15,9 +13,6 @@ services:
     web-app-b:
         image: web-app
         container_name: web-app-b
-#         build:
-#             context: .
-#             dockerfile: ./Dockerfile
         ports:
             - "10001:80"
             - "20001:3306"
